<resources>
    <string name="app_name">Skinchek AI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_myskin">MySkin</string>
    <string name="title_profile">Profile</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_signIndesc">Reference site about Lorem\nIpsum, giving information on its</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_or_make_easy">Or make easy</string>
    <string name="label_title_wawasan">Cara memilih\ntoner yang baik</string>
    <string name="label_desc_wawasan">Mengandung bahan alami baik digunakan untuk kulit berminyak</string>
    <string name="label_wawasan_harian">Wawasan harian</string>
    <string name="label_date">24</string>
    <string name="label_mounth">Wed\nJan 2023</string>
    <string name="label_ambil_selfie">Ambil selfie</string>
    <string name="skin_dry">Kulit kering adalah kondisi kulit di mana kulit kehilangan kelembaban dan cenderung terasa kering, kasar, terkelupas, dan terkadang terasa ketat.</string>
    <string name="skin_greasy">Tipe kulit berminyak adalah kondisi di mana kelenjar sebaceous di kulit menghasilkan lebih banyak minyak alami (sebum) dari yang diperlukan.</string>
    <string name="skin_sensitive">Kulit sensitif adalah kondisi kulit yang lebih rentan terhadap reaksi atau iritasi terhadap bahan atau rangsangan tertentu. </string>
    <string-array name="tipe_kulit">
        <item>Kering</item>
        <item>Berminyak</item>
        <item>Sensitif</item>
    </string-array>
</resources>